# reststops

./: .gitignore  CNAME  Cargo.toml  Dockerfile  README.md  Reststops.sln  asset-manifest.json  debug.geojson  docker-compose.dcproj  docker-compose.override.yml  docker-compose.yml  index.html  service-worker.js  service-worker.js.map
.github/workflows/: main.yml  publish-frontend-to-pages.yml  publish-release-api.yml
Reststops.Core/: AlphaIndex.cs  MapboxStaticMap.cs  Reststops.Core.csproj
Reststops.Core.Application/: Reststops.Core.csproj
Reststops.Core.Entities/: Reststops.Domain.csproj
Reststops.Core.Entities/Entities/: DirectionsMatrix.cs  DirectionsRoute.cs  EncodedPolyline.cs  ForwardGeocoding.cs  ForwardGeocodingFeature.cs  Geometry.cs  (+4 more)
Reststops.Core.Test/: AlphaIndex.Test.cs  Reststops.Core.Test.csproj
Reststops.Infrastructure.Data/: AddInfrastructure.cs  Reststops.Infrastructure.csproj
Reststops.Presentation.API/: Dockerfile  Program.cs  Reststops.Presentation.API.csproj  Startup.cs
Reststops.Presentation.ReactNative/: .gitignore  App.tsx  app.json  constants.ts  i18n.ts  package.json  tsconfig.json
Reststops.Presentation.Web/: Constants.cs  Dockerfile  MapboxStaticMap.cs  Program.cs  Reststops.Presentation.Web.csproj  _Imports.razor  nginx.conf
Reststops.Services.Import/: Program.cs  Reststops.Services.Import.csproj
backend/: .gitignore  dev.env
frontend/: README.md  capacitor.config.json  dev.env  ionic.config.json  package-lock.json  package.json
src/: buffer.rs  coordinate.rs  lib.rs  mapbox.rs  osrm.rs  overpass.rs  reststop.rs
(+762 files in other folders)
