[package]
name = "reststops"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.130"
tokio = { version = "1", features = ["full"] }
osmpbfreader = "0.15.1"
mongodb = { version = "2.0.2", default-features = false, features = ["tokio-runtime"]}
anyhow = "1.0.48"