[package]
name = "reststops"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.130"
tokio = { version = "1", features = ["full"] }
mongodb = { version = "2.0.2", default-features = false, features = ["tokio-runtime"]}
anyhow = "1.0.48"
osmpbfreader = "0.15.1"
rocket = {version = "0.5.0-rc.1", features = ["json"]}
reqwest = {version = "0.11.6", features = ["json"]}
geo = "0.18.0"
polyline = "0.9.0"
geo-clipper = "0.7.1"
futures = "0.3"